[metadata]
name = fourier
version = 0.0.1
author = thefish115
author_email = alex.fisher115@gmail.com
description = functional fourier analysis GUI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thefish115/fourier
project_urls =
    Bug Tracker = https://github.com/thefish115/fourier/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
